# civic-evals

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
analysis/: failures.py  landscape_figure.py  openendedness_figure.py  persona_drift_figure.py  persona_drift_pilot_results.json  persona_drift_rollup.py  pricing.py  rollup.py  score_openendedness.py  slack_summary.py  staleness_judge.py  usage.py
evals/election_integrity/: tasks.jsonl
evals/openendedness_ladder/: README.md  eval.py  eval.yaml  gen_tasks.py  openendedness_scores.json  scorers.py  tasks.jsonl
evals/persona_drift_pilot/: TAXONOMY.md  eval.py  eval.yaml  gen_tasks.py  tasks.jsonl
evals/policy_impact_personalization/: README.md  eval.py  eval_with_search.py
site/: next.config.ts
site/app/: globals.css  layout.tsx  page.tsx  robots.ts
site/app/components/: BaselinePanel.tsx  BiasPanel.tsx  CalibrationPanel.tsx  EvalCards.tsx  FailuresPanel.tsx  MethodsPanel.tsx  ModelCards.tsx  PersonaChart.tsx  PersonaDeltaPanel.tsx  ProviderSelect.tsx  ScoreMatrix.tsx  SubScorePanel.tsx
site/lib/: basePath.ts  evalCopy.ts  rollup-utils.ts  rollup.ts
site/public/data/: rollup.json
src/p3/lib/: __init__.py  solvers.py
src/p3/scorers/: __init__.py  fermi.py  information_density.py  response_variance.py  (+1 more)
tests/: test_citation_verifiability.py  test_fermi_refusal_shaped.py  test_information_density.py  test_multi_signal_extraction.py  test_pricing.py  test_response_variance.py  test_slack_cost_line.py  test_staleness_judge.py  test_stance_extraction.py
(+5 files in other folders)
