[project]
name = "p3-civic-evals"
version = "0.1.0"
description = "CORDA P3 — Civic Information Reliability evaluation suite"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "inspect-ai>=0.3.60",
  "pydantic>=2.7",
  "pandas>=2.2",
  "anthropic>=0.40",
  "openai>=1.40",
  "jinja2>=3.1",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "inspect-evals>=0.10.0",
  "scipy>=1.13",
  "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/p3"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
